# openrtm_aist-release

./: 0001-Added-ArtEC-1.1.0.patch.patch  0001-add-.catkin-to-CMakeLists.txt.patch  0001-add-prop-config_file-to-ManagerConfig.cpp.patch  0001-use-python-dev-python2-dev-for-focal.patch  0002-Added-Manager.cpp.patch.patch  0002-Importing-patches-from-indigo-release-branch.patch  0002-fix-for-idl-file-which-is-located-on-directory-conta.patch  0002-noetic-explictly-set-python2-for-shebang-find-.-inam.patch  0003-add-patch-to-fix-OutPort.h-bugs-https-github.com-Ope.patch  0003-fix-for-idl-file-which-is-located-on-directory-conta.patch  0003-more-fix-usr-bin-env-python-usr-bin-env-pythno2.patch  0004-add-prop-config_file-to-ManagerConfig.cpp.patch  0004-remove-duplicate-definition-of-config_fname.patch  0005-fix-for-idl-file-which-is-located-on-directory-conta.patch  0006-add-patch-to-fix-OutPort.h-bugs.patch  0007-remove-duplicate-definition-of-config_fname.patch  CMakeLists.txt  Makefile.am  README.md  configure.ac  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  copyright  gbp.conf  rules
docs/: Makefile.am
etc/: rtc.conf.sample
examples/AutoTest/: ConnectTest.py  CorbaNaming.py  TestsConnection.py
examples/ConfigSample/: Makefile.am
examples/ExtTrigger/: ConnectorComp.cpp  Makefile.am
examples/SeqIO/: Makefile.am
examples/SimpleIO/: ConnectorComp.cpp  ConsoleIn.h  Makefile.am  run.sh
examples/SimpleService/: Makefile.am
examples/tests/: AddRemoveMemberSDOPackageTest.py  AddRemoveOrganizationSDOPackageTest.py  AddRemoveRTCTest.py  AttachDetachRTCTest.py  ConfigurationSDOPackageTest.py  ConnectRTCTest.py  CreateDeleteRTCTest.py  DataPortTest.py  ManagerTest.py  OrganizationSDOPackageTest.py  RTCTest.py  SDOPackageTest.py  ServiceProfileSDOPackageTest.py  SetMemberSDOPackageTest.py
indigo/: CMakeLists.txt  package.xml
melodic/: package.xml
rpm/: ros-hydro-openrtm-aist.spec  ros-indigo-openrtm-aist.spec  ros-jade-openrtm-aist.spec  ros-kinetic-openrtm-aist.spec  ros-melodic-openrtm-aist.spec  template.spec
src/ext/ec/artlinux/: ArtExecutionContext.cpp
src/lib/coil/common/: Properties.cpp
src/lib/coil/tests/Properties/: Makefile.am
src/lib/doil/utils/omniidl_be/doil/: __init__.py  config.py  dictbuilder.py  util.py  yat.py
src/lib/doil/utils/omniidl_be/doil/corba/: __init__.py  template.py
src/lib/doil/utils/omniidl_be/doil/ice/: __init__.py
src/lib/doil/utils/omniidl_be/doil/interface/: __init__.py  template.py
src/lib/doil/utils/omniidl_be/tests/unitTest/: remake_servants.py  setuptest.py
src/lib/rtc/corba/idl/: Makefile.am
src/lib/rtm/: CORBA_SeqUtil.h  ConfigAdmin.cpp  ConfigAdmin.h  DefaultConfiguration.h  InPort.h  InPortBase.cpp  InPortConsumer.h  InPortProvider.h  Makefile.am  Manager.cpp  Manager.h  ManagerConfig.cpp  ModuleManager.cpp  OutPort.h  OutPortBase.cpp  OutPortConsumer.h  OutPortProvider.h  PeriodicExecutionContext.cpp  PortAdmin.cpp  PublisherBase.h  RTObject.cpp  RTObject.h  SdoConfiguration.cpp  SdoConfiguration.h
src/lib/rtm/idl/: Makefile.am
src/lib/rtm/tests/: TestRunner.cpp
src/lib/rtm/tests/OutPort/: OutPortTests.cpp
src/lib/rtm/tests/OutPortProvider/: OutPortProviderTests.cpp
src/lib/rtm/tests/RingBuffer/: RingBufferTests.cpp
utils/: Makefile.am
utils/rtc-link/: RtcLink.py  RtcLink.pyw  RtmAbout.py  RtmCompData.py  RtmDialog.py  RtmDtdValidator.py  RtmFrame.py  RtmLineUtil.py  RtmNSHelper.py  RtmParser.py  RtmSystemDraw.py  RtmTreeCtrl.py  rtc-link
utils/rtc-template/: README_gen.py  cxx_gen.py  cxx_svc_impl.py  gen_base.py  profile_gen.py  python_gen.py  rtc-template  test-template.py  vcproj_gen.py
utils/rtcd/: Makefile.am
utils/rtm-config/: Makefile.am  rtm-config.in
utils/rtm-manager/: NSHelper.py  rtm-manager
utils/rtm-naming/: rtm-naming.in
utils/rtm-skelwrapper/: rtm-skelwrapper  skel_wrapper.py
win32/OpenRTM-aist/: Makefile.am  autobuild_vc8.bat
win32/OpenRTM-aist/examples/ConfigSample/: Makefile.am
win32/OpenRTM-aist/examples/SeqIO/: Makefile.am
win32/OpenRTM-aist/examples/SimpleIO/: Makefile.am
win32/OpenRTM-aist/examples/SimpleService/: Makefile.am
win32/OpenRTM-aist/examples/USBCamera/: Makefile.am
win32/OpenRTM-aist/installer/: Makefile.am
win32/OpenRTM-aist/installer/OpenCV-RTC/: opencvrtcwxs.py
win32/OpenRTM-aist/installer/OpenCV2.1/: opencvwxs.py
win32/OpenRTM-aist/installer/OpenRTP/: openrtpwxs.py
win32/OpenRTM-aist/installer/omniORB/: omniwxs.py
win32/OpenRTM-aist/rtm/: Makefile.am
win32/OpenRTM-aist/rtm/idl/: Makefile.am
