## -*- Makefile -*-
##---------------------------------------------------------------------------
## Makefile.am for OpenRTM-aist utilities
##
## $Id: Makefile.am 2176 2011-06-06 00:32:16Z n-ando $
##---------------------------------------------------------------------------

AUTOMAKE_OPTIONS = 1.4

SUBDIRS = rtm-config cmake rtc-template rtm-skelwrapper rtm-naming rtcd rtcprof

